--- a/check.html
+++ b/check.html
@@ -21,6 +21,7 @@
         <tbody>
             <tr>
                 <td align="center"><a href="index.html">Index</a></td>
+                <td align="center"><a href="show.php">ShowTable</a></td>
                 <td align="center"><a href="form.html">Form</a></td>
             </tr>
         </tbody>
