--- a/check.html
+++ b/check.html
@@ -15,14 +15,15 @@
         <table class = "table table-bordered table-hover" width="600" align="center" border="1">
             <thead class="thead-dark">
                 <tr>
-            <th width="300"> <div align="center">Name File</div></th>
-            <th width="300"> <div align="center">Link </div></th>
+            <th width="300"> <div align="center">File</div></th>
+            <th width="300"> <div align="center">Check </div></th>
+            <th width="300"> <div align="center">Naja</div></th>
                 </tr>
         <tbody>
             <tr>
-                <td align="center"><a href="index.html">Index</a></td>
                 <td align="center"><a href="show.php">ShowTable</a></td>
                 <td align="center"><a href="form.html">Form</a></td>
+                <td align="center"><a href="insert.php">insert</a></td>
             </tr>
         </tbody>
     </thead>
